# ai-clm-assistant

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.template  Dockerfile  alembic.ini  entrypoint.sh  generate_migration.sh
backend/app/: main.py
backend/app/api/: auth.py  docx_editor.py  endpoints.py  guidelines.py  ws_graph_chat.py  ws_notifications.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/seeds/: cpwd_guideline_v1.json
backend/app/services/: __init__.py  agent_workflow.py  comparison_chat.py  compliance_check.py  cpwd_copilot.py  document_chunker.py  docx_track_changes.py  draft_system.py  graph_builder.py  graph_cypher_chat.py  guideline_contract.py  notifier.py  output_json_to_docx.py  review_system.py
backend/migrations/: env.py
backend/migrations/versions/: 02b88216e8fa_document_sign.py  054061ec1bf6_document_sign.py  085938aef0a3_milestonepp.py  0c2cb5fd41d5_1001.py  114d69312450_add_review_items.py  16c8f62c96ae_drive_document_changes.py  197a44ca9125_document_sign.py  359680a19941_sync_models.py  35b5af3c65f9_document_sign.py  3799a4e31c7d_test.py  385a0a29b077_add_scoring_results_table.py  3c9d140750c6_document_sign_lkddd.py  467b1594dac6_add_field_type_and_value_to_.py  5274cdb99115_sub_folder.py  (+45 more)
backend/scripts/: build_cpwd_guideline_seed.py  restore_demo_database.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: graph_data.json
frontend/src/: App.vue  main.js  style.css
(+49 files in other folders)
